<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RedFox Game</string>

    <!-- Авторизация -->
    <string name="login_title">Вход</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Пароль</string>
    <string name="login_button">Войти</string>
    <string name="register_link">Регистрация</string>
    <string name="forgot_password_link">Забыли пароль?</string>
    <string name="register_title">Регистрация</string>
    <string name="confirm_password_hint">Подтвердите пароль</string>
    <string name="register_button">Зарегистрироваться</string>
    <string name="reset_password_title">Восстановление пароля</string>
    <string name="reset_password_button">Отправить ссылку</string>
    <string name="back">Назад</string>
    <string name="login_subtitle">Войдите, чтобы продолжить</string>
    <string name="register_subtitle">Создайте аккаунт для начала игры</string>

    <!-- Ошибки авторизации -->
    <string name="error_account_not_found">Аккаунт не найден. Зарегистрируйтесь</string>
    <string name="error_wrong_credentials">Неверный email или пароль</string>
    <string name="error_already_registered">Пользователь с таким email уже зарегистрирован</string>
    <string name="error_reset_not_available">Сброс пароля будет доступен после подключения сервера</string>

    <!-- Главный экран -->
    <string name="real_game">Реальная игра</string>
    <string name="demo_game">Демо игра</string>
    <string name="real_game_description">Спрогнозируйте движение реального графика BTC на коротком интервале и заберите реальные деньги</string>
    <string name="demo_game_description">Изучи платформу и потренируйся делать прогноз на демо-счёте игры</string>
    <string name="badge_coming_soon">Скоро</string>

    <!-- Соединение -->
    <string name="no_connection">Нет соединения с сервером</string>
    <string name="reconnecting">Переподключение…</string>

    <!-- Баланс -->
    <string name="balance_empty_title">Баланс исчерпан</string>
    <string name="balance_empty_message">Пополнить демо-счёт на $%s?</string>

    <!-- График -->
    <string name="chart_waiting">Ожидание данных…</string>
    <string name="chart_btc_live">BTC Live</string>
    <string name="chart_start">START</string>

    <!-- Игра -->
    <string name="balance">Баланс</string>
    <string name="deposit">Пополнить</string>
    <string name="withdraw">Вывести</string>
    <string name="pool_up">UP</string>
    <string name="pool_down">DOWN</string>
    <string name="place_bet">Поставить</string>
    <string name="betting_phase">Приём ставок</string>
    <string name="active_phase">Игра идёт</string>
    <string name="calculating">Расчёт...</string>
    <string name="potential_income">Потенциальный доход</string>
    <string name="round_history">История раундов</string>
    <string name="min_bet">МИН</string>
    <string name="max_bet">МАКС</string>
    <string name="result_win">ПОБЕДА!</string>
    <string name="result_lose">ПРОИГРЫШ</string>

    <!-- Демо пополнение -->
    <string name="demo_deposit_title">Пополнить демо-счёт</string>
    <string name="demo_deposit_hint">Это виртуальные деньги для тренировки</string>
    <string name="demo_deposit_button">Пополнить</string>
    <string name="demo_deposit_max_reached">Максимальный баланс $50,000</string>

    <!-- Пополнение / Вывод -->
    <string name="deposit_title">Пополнение</string>
    <string name="withdraw_title">Вывод средств</string>
    <string name="select_network">Выберите сеть</string>
    <string name="copy_address">Копировать адрес</string>
    <string name="enter_address">Введите адрес</string>
    <string name="scan_qr">Сканировать QR</string>
    <string name="amount">Сумма</string>
    <string name="commission">Комиссия</string>
    <string name="confirm">Подтвердить</string>
    <string name="kyc_required">Требуется верификация KYC</string>

    <!-- Профиль -->
    <string name="profile_title">Профиль</string>
    <string name="nickname">Никнейм</string>
    <string name="statistics">Статистика</string>
    <string name="rounds_played">Раунды</string>
    <string name="wins">Победы</string>
    <string name="losses">Поражения</string>
    <string name="profit">Профит</string>
    <string name="saved_addresses">Сохранённые адреса</string>
    <string name="change_password">Сменить пароль</string>
    <string name="logout">Выйти</string>

    <!-- Поддержка -->
    <string name="support_title">Поддержка</string>
    <string name="support_telegram">@RedFoxTrading_Support</string>
    <string name="telegram_support">Telegram поддержка</string>
    <string name="email_support">Email поддержки</string>
    <string name="faq">Частые вопросы</string>

    <!-- Общие -->
    <string name="ok">OK</string>
    <string name="reset_password_instruction">Введите email, на который придёт ссылка для сброса пароля</string>

    <!-- Валидация -->
    <string name="error_email_invalid">Некорректный email</string>
    <string name="error_password_short">Пароль минимум 8 символов</string>
    <string name="error_passwords_mismatch">Пароли не совпадают</string>
    <string name="error_field_required">Обязательное поле</string>

    <!-- Профиль (экран статистики) -->
    <string name="profile_demo">Демо</string>
    <string name="profile_real">Реальная</string>
    <string name="profile_filter_day">День</string>
    <string name="profile_filter_month">Месяц</string>
    <string name="profile_filter_all">Всё время</string>
    <string name="profile_total_rounds">Всего раундов</string>
    <string name="profile_wins">Побед</string>
    <string name="profile_losses">Поражений</string>
    <string name="profile_profit">Профит</string>
    <string name="profile_avg_bet">Средняя ставка</string>
    <string name="profile_logout">Выход</string>
</resources>
